--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -153,21 +153,19 @@
 /* Type */
 
 	body, input, select, textarea {
-		color: white;
+		color: white !important;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 14pt;
 		font-weight: 500;
 		line-height: 2;
 		letter-spacing: 0.1em;
+		
 		/*text-transform: lowercase;*/
 	}
 	#main{
 		background: rgba(0, 0, 0, 0.5) !important;
 	}
 
-	#main h2{
-		color: white;
-	}
 
 		@media screen and (max-width: 1680px) {
 
@@ -1010,20 +1008,21 @@
 		-ms-perspective: 1000px;
 		perspective: 1000px;
 		position: relative;
-		min-height: 100%;
+		min-height: 20%;
 		padding: 1.5em;
 		z-index: 2;
+
 	}
 
 		#wrapper > * {
 			z-index: 1;
 		}
 
-		#wrapper:before {
+		/*#wrapper:before {
 			content: '';
 			display: block;
 		}
-
+*/
 		@media screen and (max-width: 360px) {
 
 			#wrapper {
